# live555-cmake

./: CMakeLists.txt  README.md  config.linux-with-shared-libraries
BasicUsageEnvironment/: BasicTaskScheduler.cpp  BasicUsageEnvironment.cpp  BasicUsageEnvironment0.cpp  CMakeLists.txt
BasicUsageEnvironment/include/: BasicUsageEnvironment.hh  BasicUsageEnvironment0.hh  BasicUsageEnvironment_version.hh
UsageEnvironment/: CMakeLists.txt  UsageEnvironment.cpp
UsageEnvironment/include/: UsageEnvironment.hh  UsageEnvironment_version.hh
demo/: CMakeLists.txt
demo/MPEG2TransportStreamIndexer/: MPEG2TransportStreamIndexer.cpp
demo/basic/: typeid_test.cpp
doc/: live555.md
groupsock/: CMakeLists.txt  GroupsockHelper.cpp
groupsock/include/: NetCommon.h  groupsock_version.hh
hlsProxy/: live555HLSProxy.cpp
liveMedia/: CMakeLists.txt  FileSink.cpp  MediaSession.cpp  MediaSink.cpp  RTSPClient.cpp  RTSPServer.cpp  VorbisAudioRTPSink.cpp
liveMedia/include/: FileSink.hh  FramedSource.hh  MPEG2TransportStreamFramer.hh  RTSPServer.hh  VorbisAudioRTPSink.hh  liveMedia_version.hh
mediaServer/: DynamicRTSPServer.cpp
